--- a/crowdfunding.ipynb
+++ b/crowdfunding.ipynb
@@ -4286,7 +4286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.15"
+   "version": "3.7.15 (default, Nov 10 2022, 12:46:26) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
